--- a/Ball.html
+++ b/Ball.html
@@ -10,14 +10,16 @@
 <body>
 
 
-    <canvas id="canvas" width=200 height=200></canvas>
+    <canvas id="canvas" width=400 height=400></canvas>
 
     <script>
+        
+
         var Ball = function () {
             this.x = 100;
             this.y = 100;
-            this.xSpeed = -2;
-            this.ySpeed = 3;
+            this.xSpeed = Math.floor(Math.random()*(-5));
+            this.ySpeed = Math.floor(Math.random()*(5));
         };
         var circle = function (x, y, radius, fillCircle) {
             ctx.beginPath();
@@ -38,11 +40,16 @@
             this.y += this.ySpeed;
         };
 
+
+
+
+
+
         Ball.prototype.checkCollision = function () {
-            if (this.x < 0 || this.x > 200) {
+            if (this.x < 0 || this.x > width) {
                 this.xSpeed = -this.xSpeed;
             }
-            if (this.y < 0 || this.y > 200) {
+            if (this.y < 0 || this.y > height) {
                 this.ySpeed = -this.ySpeed;
             }
         };
@@ -50,14 +57,18 @@
         var canvas = document.getElementById("canvas");
         var ctx = canvas.getContext("2d");
 
+        var width = canvas.width;
+        var height = canvas.height;
+        
         var ball = new Ball();
         setInterval(function () {
-            ctx.clearRect(0, 0, 200, 200);
+            ctx.clearRect(0, 0, width, height);
             ball.draw();
             ball.move();
             ball.checkCollision();
-            ctx.strokeRect(0, 0, 200, 200);
+            ctx.strokeRect(0, 0, width, height);
         }, 30);
+        var canvas
     </script>
 </body>
 
